@@ -1,3 +1,7 @@
+2018-09-14  Carl Hetherington  <cth@carlh.net>
+
+	* Basic dual-screen mode for player.
+
 2018-09-11  Carl Hetherington  <cth@carlh.net>
 
 	* Full-screen mode for player (#1329).
